This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.2.2 (UNRELEASED):
-------------------
Bug fixes:
 * apport: Redefine sys.std{out,err} when redirecting output, as they are None
   in Python 3 when being called from the kernel.
 * test/test_signal_crashes.py: Clean up unexpected core dumps on failed test
   cases.

2.2.1 (2012-06-11)
------------------
Bug fixes:
 * apport-cli: Port to work with Python 3.
 * setup.py: When fixing hashbang lines of installed scripts, only include the
   major Python version.
 * hookutils.py, read_file, attach_file(), attach_file_if_exists(): Convert
   file contents to unicode if the contents is UTF-8, or the newly added
   force_unicode argument is True.
 * hooktuils, command_output(): Convert output to unicode by default, and add
   a "decode_utf8" parameter to disable this.
 * hookutils.py, recent_logfile(): Fix fd leak.
 * data/apport: Do not assume that sys.stdout and sys.stderr always have a
   name; they can be None in Python 3.
 * data/dump_acpi_tables.py: Fix for Python 3.

2.2 (2012-06-11)
----------------
Improvements:
 * Clean up module imports.
 * test/run: Run pyflakes, if available.
 * package_hook: Add --tags option. Thanks to Brian Murray.
 * launchpad.py: Drop the external multipartpost_handler.py (which is not
   portable to Python 3) and replace it with using the standard email module.
 * launchpad.py: Also work with Python 3. Deal gracefully with a missing
   "launchpadlib" module; this is not yet available for Python 3, but not
   required for client-side reporting.
 * apport-kde: Port to work with Python 3.

Bug fixes:
 * apport-retrace: Fix crash when using the --procmaps option.
 * setup.py: Update hashbang lines of installed scripts in data directory to
   the python executable setup.py was run with, similar to what already happens
   to scripts installed to ../bin/.

2.1.1 (2012-05-30)
------------------
Improvements: